--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,6 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+/Azuretest_cpp/Intermediate/
+/AzureTest_cpp/Binaries/
+/AzureTest_cpp/Saved/
