Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,7 @@ steps:
   displayName: 'Move to tmpfolder '
 - script: |
     git config --local user.name udemegane
-    git config --loval user.email cappuccino1204.ck@gmail.com
+    git config --local user.email cappuccino1204.ck@gmail.com
   displayName: 'Set git config'
 - script: |
     mkdir ~/.ssh 
