--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,9 +42,9 @@ steps:
 
 - script: |
     cd /tmp/$(TmpRepoDir)
-    git init
     git add -A
+    git branch -M main
     git commit -m "Mirror Source code from Azure repos"  
-    git push origin main 
+    git push -u origin main 
   displayName: 'Copy to Github'
 
