--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,8 +27,8 @@ steps:
 - script: |
     mkdir ~/.ssh 
     chmod 700 ~/.ssh
-    echo $(SSH_key) > ~/.ssh/id_ecdsa
-    chmod 600 ~/.ssh/id_ecdsa
+    echo $(SSH_key) > ~/.ssh/id_ed25519
+    chmod 600 ~/.ssh/
   displayName: 'Set Key'
   
 - script: |
