--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,33 +24,17 @@ steps:
     cd /tmp && rm -rf /tmp/$(TmpRepoDir)
   displayName: 'Reset tmp folder'
 
-- script: |
-    mkdir ~/.ssh 
-    chmod 700 ~/.ssh
-    echo $(SSH_key) > ~/.ssh/id_ed25519
-    echo $(Hosts) > ~/.ssh/known_hosts
-    chmod 600 ~/.ssh/id_ed25519
-  displayName: 'Set Key'
-  
-- script: |
-    mkdir ~/mirror
-    cd ~/mirror
-    git clone $(MIRROR_REPOSITORY)
-  displayName: 'Clone mirror repo'
-
 - task: CopyFiles@2
   inputs:
     contents: '$(Build.SourcesDirectory)/AzureTest_cpp/Source/**'
     targetFolder: /tmp/$(TmpRepoDir)
 
 - script: |
-    cp -r -f /tmp/$(TmpRepoDir) ~/mirror
-
-- script: |
-    cd ~/mirror
-    echo | ls -l
-    git add -A
-    git commit -m "Mirror Source code from Azure repos"  
-    git push -u origin main 
+    cd /tmp/$(TmpRepoDir)
+    git add . 
+          if ! (git diff --quiet && git diff --staged --quiet); then
+            git commit -m "Add: changes ($GITHUB_SHA)"    # ハッシュをメモってコミット
+          fi
+    git push https://$(Github_Username):${Github_Token}@github.com/$(Github_Username)/UE426_azuretest
   displayName: 'Copy to Github'
 
