--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,6 +36,6 @@ steps:
           if ! (git diff --quiet && git diff --staged --quiet); then
             git commit -m "Add: changes ($GITHUB_SHA)" 
           fi
-    git push origin HEAD:master https://udemegane:$(Github_Token)@github.com/udemegane/UE426_azuretest_mirror.git
+    git push https://udemegane:$(Github_Token)@github.com/udemegane/UE426_azuretest_mirror.git main
   displayName: 'Copy to Github'
 
