--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,6 +42,6 @@ steps:
             git commit -m "Add: changes ($GITHUB_SHA)" 
           fi
     git commit -m "Mirror from Azure Repos"
-    git push https://udemegane:$(Github_Token)@github.com/udemegane/UE426_azuretest_mirror.git main
+    git push https://udemegane:$(Github_Token)@github.com/udemegane/UE426_azuretest_mirror.git
   displayName: 'Copy to Github'
 
