Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,7 +37,7 @@ steps:
   
 - script: |
     cd ~/mirror
-    git add -A
+    git add .
     git commit -m "Mirror from Azure Repos"
     git push https://udemegane:$(Github_Token)@github.com/udemegane/UE426_azuretest_mirror.git
   displayName: 'Copy to Github'
