--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,8 @@ steps:
 - script: |
     cd /tmp && rm -rf /tmp/$(TmpRepoDir)
     git -c http.extraheader="AUTHORIZATION: bearer $(System.AccessToken)" clone --mirror $(Build.Repository.Uri) $(TmpRepoDir)
-    git -C /tmp/$(TmpRepoDir) push https://udemegane:$(Github_Token)@github.com/udemegane/UE426_azuretest_mirror.git
+    ls
+    git -C /tmp/$(TmpRepoDir) push --mirror https://udemegane:$(Github_Token)@github.com/udemegane/UE426_azuretest_mirror.git
   displayName: 'Copy to GitLab'
 
 
