Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,9 @@ steps:
   inputs:
     sourceGitRepositoryUri: 'https://cappuccino1204ck@dev.azure.com/cappuccino1204ck/UE426_test/_git/UE426_test'
     sourceVerifySSLCertificate: false
+    sourceGitRepositoryCloneDirectoryName: 'Source'
     destinationGitRepositoryUri: 'https://github.com/udemegane/UE426_Azure_mirror.git'
     destinationGitRepositoryPersonalAccessToken: '$(Github_Token)'
+    sourceGitRepositoryPersonalAccessToken: 
 
 
