Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,6 @@ steps:
     sourceGitRepositoryCloneDirectoryName: 'Source'
     destinationGitRepositoryUri: 'https://github.com/udemegane/UE426_Azure_mirror.git'
     destinationGitRepositoryPersonalAccessToken: '$(Github_Token)'
-    sourceGitRepositoryPersonalAccessToken: 
+    sourceGitRepositoryPersonalAccessToken: '$(Azure_Token)'
 
 
