Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,6 @@ steps:
     sourceVerifySSLCertificate: false
     destinationGitRepositoryUri: 'https://github.com/udemegane/UE426_Azure_mirror.git'
     destinationGitRepositoryPersonalAccessToken: '$(Github_Token)'
-    sourceGitRepositoryPersonalAccessToken: '$(Azure_Token)'
+    sourceGitRepositoryPersonalAccessToken: '$(Azure_Token_full)'
 
 
