--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ steps:
 - task: swellaby.mirror-git-repository.mirror-git-repository-vsts-task.mirror-git-repository-vsts-task@1
   displayName: 'Mirror Git Repository'
   inputs:
-    sourceGitRepositoryUri: 'https://cappuccino1204ck@dev.azure.com/cappuccino1204ck/UE426_test/_git/UE426_test'
+    sourceGitRepositoryUri: 'https://dev.azure.com/cappuccino1204ck/UE426_test/_git/UE426_test'
     sourceVerifySSLCertificate: false
     destinationGitRepositoryUri: 'https://github.com/udemegane/UE426_Azure_mirror.git'
     destinationGitRepositoryPersonalAccessToken: '$(Github_Token)'
